ProductDetails unit test done

--- a/C#/Edfa3ly-TakeHomeTestSample.Test/Edfa3ly-TakeHomeTestSample.Test.csproj
+++ b/C#/Edfa3ly-TakeHomeTestSample.Test/Edfa3ly-TakeHomeTestSample.Test.csproj
@@ -22,4 +22,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Edfa3ly-TakeHomeTestSample\Edfa3ly-TakeHomeTestSample.csproj" />
+  </ItemGroup>
+
 </Project>
